--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ function ticked() {
 
 function aaaa() {
   nodes.push({id:"d"}); // Remove c.
-    links.push({source: a, target: b}); // Add a-b.  restart();
+    // this breaks it links.push({source: a, target: b}); // Add a-b.  restart();
 
 }
 
